<resources>
    <string name="app_name">Кыргызстан маалымдамасы</string>

    <string name="text_kg1">
        Кыргызстан Маалымат Системасы
        Кыргызстандын айыл-аймактары, жер-суулары жөнүндө маалымат жана
        аттарынын чечилмесин берет
    </string>


    <string name="text_ru1">
       Информационная Система Кыргызстана
        Вам предоставляется информация про областей, городов, поселков, рек и вод Кыргызстана.
    </string>

    <string name="text_eng1">
        Kyrgyzstan Information System
         You are provided with information about the regions, cities, towns,
         rivers and waters of Kyrgyzstan.
    </string>

    <string name="i1">
        <br>Идея создание приложение принадлежить</br>
        <br>Мекенбаеву Бакыту Тойматовичу  </br>
    </string>

    <string name="i2">
         <br>Идея создания приложения на Android Studio принадлежить </br>
        <br>Ткачману Михаил Леонидовичу с.п. "МУИТ"</br>
    </string>

    <string name="i3">
        <br>Разработчик приложения </br>
        <br>Дуйшонов Омуралы  студент
        Выпускник по ИТ-спец-и универ."МУИТ"
        Выпускник по ИТ-спец-и колледжа "КОМТЕХНО"</br>
    </string>

    <string name="i4">
        <br>Передали информацию с переводом Халпаев Алтынбек </br>
        <br>Специалисть по архитектуре и по географии. Выпускник "КГУСТА" </br>
    </string>

    <string name="m1">
        <br>Среда разработки Андроид Студио</br>
        <br>Получень диплом 3-й степени, Сертификат, Почетная грамота</br>
        <br>Призы от спонсоров банка РСК, ОсОО UlutSoft, и денежная стипендия от универ. МУИТ </br>
    </string>

    <string name="m2">
        <br>Version App 1.1 beta</br>

    </string>

    <string name="v1">
        <br>Приложение разрабатывается в связи с тем информации мало.
        Если Вы хотите предоставить инф. обратитесь к разработчику</br>

    </string>

    <string name="v2">
        <br> Whats app +996707 231 231
        Instagarm @d_omuraly
         Сделайте свой вклад в развитие приложения</br>

    </string>

    <string name="v3">
        <br>С любыми претензиями, советами, пожеланиями, и сотрудничеству тел: 0707 231 231,
        0999 882 499</br>

    </string>
</resources>
