<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".obratSviaz">

    <TextView
        android:layout_width="336dp"
        android:layout_height="105dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp"
        android:text="@string/v1"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp">
    </TextView>

    <TextView
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="277dp"
        android:text="@string/v2"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp">
    </TextView>

    <TextView
        android:layout_width="307dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="499dp"
        android:text="@string/v3"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp">
    </TextView>


</RelativeLayout>